samples/_failures_safe/1761392462_c7956d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_456dac34.c: In function ‘main’:
./samples/SAFE/__tmp_456dac34.c:139:27: error: missing terminating " character
  139 |         choice = read_int("Choose operation
      |                           ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_456dac34.c:139:9: error: expected expression at end of input
  139 |         choice = read_int("Choose operation
      |         ^~~~~~
./samples/SAFE/__tmp_456dac34.c:139:18: error: too few arguments to function ‘read_int’
  139 |         choice = read_int("Choose operation
      |                  ^~~~~~~~
./samples/SAFE/__tmp_456dac34.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_456dac34.c:139:9: error: expected declaration or statement at end of input
  139 |         choice = read_int("Choose operation
      |         ^~~~~~
./samples/SAFE/__tmp_456dac34.c:139:9: error: expected declaration or statement at end of input
